--- a/src/package.json
+++ b/src/package.json
@@ -11,6 +11,7 @@
   "author": "Tomás Marenco, Irina Leicach, Gastón Gatti",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
     "express-validator": "^6.10.0",
