--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Página web de venta de plantas",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node src/app.js",
+    "startdev": "nodemon src/app.js -e ejs,js,html,json"
   },
   "repository": {
     "type": "git",
